# bot

./: .env.example  .gitignore  .gitmessage  Dockerfile  README.md  bot.py  db.sqlite3  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
.github/workflows/CI/: CD.yml
.github/workflows/ci/: cd.yml
archiver/: adapters.py  admin.py  dto.py  models.py  services.py  tasks.py  tests.py  urls.py  views.py
archiver/migrations/: 0001_initial.py  0002_auto_20260112_0736.py  0002_qnalog_is_verified.py  0003_alter_qnalog_ai_answer.py  0003_qnalog_hit_count_qnalog_notion_page_url_and_more.py  0004_qnalog_hit_count_qnalog_notion_page_url_and_more.py  0005_qnalog_keywords.py  0006_merge_20260105_0906.py  0007_alter_qnalog_options_remove_qnalog_keywords_and_more.py
archiver/templates/archiver/: index.html
common/: exceptions.py
config/: settings.py  urls.py
core/: exceptions.py  middlewares.py
tests/: test_basic.py
