[project]
name = "discord-qna-archiver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.39.0",
    "discord-py>=2.6.4",
    "django>=6.0",
    "django-import-export>=4.3.14",
    "djangorestframework>=3.16.1",
    "pillow>=12.0.0",
    "psycopg[binary]>=3.3.2",
    "pyparsing>=3.3.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
