[project]
name = "discord-qna-archiver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-generativeai>=0.8.3",
    "discord-py>=2.6.4",
    "django>=6.0",
    "django-import-export>=4.3.14",
    "djangorestframework>=3.16.1",
    "pillow>=12.0.0",
    "psycopg[binary]>=3.3.2",
    "pyparsing>=3.3.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "pytest>=9.0.2",
    "django-environ>=0.12.0",
    "django-q2>=1.9.0",
    "gunicorn>=23.0.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings" # 본인 프로젝트 설정 경로로 수정
python_files = ["tests.py", "test_*.py", "*_tests.py"]
